objects/VlocityEPCDeployment__c.object
<CustomObject>
    <fields>
        <fullName>Environment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Environment</label>
        <referenceTo>copado__Environment__c</referenceTo>
        <relationshipLabel>EPC Deployments</relationshipLabel>
        <relationshipName>EPC_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Execution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Execution</label>
        <referenceTo>copado__JobExecution__c</referenceTo>
        <relationshipLabel>EPC Deployments</relationshipLabel>
        <relationshipName>EPC_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Result</label>
        <referenceTo>copado__Result__c</referenceTo>
        <relationshipLabel>EPC Deployments</relationshipLabel>
        <relationshipName>EPC_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_Branch__c</fullName>
        <description>Source Git branch</description>
        <inlineHelpText>Source Git branch</inlineHelpText>
        <label>Source Branch</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Job Status</description>
        <formula>TEXT(Job_Execution__r.copado__Status__c)</formula>
        <inlineHelpText>Job Status</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Template</label>
        <referenceTo>VlocityEPCConfiguration__c</referenceTo>
        <relationshipLabel>EPC Deployments</relationshipLabel>
        <relationshipName>EPC_Deployments</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>EPC Deployment</label>
    <nameField>
        <displayFormat>D{000000}</displayFormat>
        <label>EPC Deployment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EPC Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>